--- a/aulao_nextjs/fundamentos/src/styles/Layout.module.css
+++ b/aulao_nextjs/fundamentos/src/styles/Layout.module.css
@@ -6,7 +6,7 @@
 }
 .cabecalho {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 10px 20px;
     background-color: #777;
 }
